2006-05-20  Wakaba  <wakaba@suika.fam.cx>

	* XDP.dis (createXDPRNIKeyword): The Perl method
	name property is added.

2006-05-20  Wakaba  <wakaba@suika.fam.cx>

	* XDP.dis (createXDPIf): New method.
	(XDPIfElement): New interface.

2006-05-15  Wakaba  <wakaba@suika.fam.cx>

	* XDP.dis (createXDPElement, createXDPAttlist, createXDPAttrDefinition):
	New methods.

2006-05-15  Wakaba  <wakaba@suika.fam.cx>

	* XDP.dis (XDPDocument): A number of constructor methods
	are added.
	(XDPTextDecl.dtdText): The |xml| target was missing.

2006-05-14  Wakaba  <wakaba@suika.fam.cx>

	* Traversal.dis (SerialWalker): New interface.
	(manakaiCreateSerialWalker): New method.

2006-05-13  Wakaba  <wakaba@suika.fam.cx>

	* Traversal.dis (testNode): Calls |acceptNode| method
	rather than |&{}| dereferencing.
	(acceptNode): Implemented.

2006-05-13  Wakaba  <wakaba@suika.fam.cx>

	* XDP.dis: New module.

	* Makefile: |XDP.dis| is added.

	* Traversal.dis (NodeFilter): |InputProcessor|
	and |OutputProcessor| are added.

2006-05-13  Wakaba  <wakaba@suika.fam.cx>

	* Traversal.dis (MANAKAI_FILTER_OPAQUE): New |AcceptNode| value.
	(TreeWalker): The |MANAKAI_FILTER_OPAQUE| value support
	is added.  The |FILTER_REJECT| value is treated
	as |FILTER_ACCEPT| if the |currentNode| is in the
	rejected subtree as specified in the spec.

2006-05-05  Wakaba  <wakaba@suika.fam.cx>

	* SimpleLS.dis: An |xmlns:| prefix was missing.

2006-05-04  Wakaba  <wakaba@suika.fam.cx>

	* SimpleLS.dis: Namespace bugs are fixed.

2006-04-30  Wakaba  <wakaba@suika.fam.cx>

	* .cvsignore: Updated.

	* Traversal.dis: Unused declarations are removed.

2006-04-30  Wakaba  <wakaba@suika.fam.cx>

	* CharacterData.dis (Require): A reference to 
	the |MDOM:Traversal| module is added.
	(wholeText): Implemented.

2006-04-30  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: |Traversal.dis| is added.

	* Traversal.dis: New module.

	* TreeCore.dis (___report_error): Return value was
	not propagated.
