@@ -1,3 +1,11 @@
+2006-05-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* Atom.dis (AtomDatatypes): Attribute group and
+	datatypes are added.
+	(atomCommonAttributes): New.
+	(atomUri, atomEmailAddress, atomNCName, atomLanguageTag): News.
+	(AtomNameElement, AtomIdElement, AtomUriElement): News.
+
 2006-05-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* Atom.dis (AtomDataTypes): New module.
