@@ -1,3 +1,12 @@
+2006-05-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* DISMarkup.dis, XML.dis: Definitions are added.
+
+	* daf-dtd-modules.pl: Supported for the |mv:elementContentModel|
+	and |mv:attributeValueType| properties
+	and |mv:XMLDTDDatatypeEntity| type and |mv:contains|
+	with |mv:AttributeTypeGroup| are added.
+
 2006-05-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* DISMarkup.dis: Definitions are added.
