@@ -1,3 +1,8 @@
+2006-05-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* XDP.dis (XDPEntityValue.stringify): Don't escape
+	any |%|s in |xdp:attr-definition| children.
+
 2006-05-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* XDP.dis (createXDPRNIKeyword): The Perl method
